--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
 <meta charset="utf-8">
 <title>SVPRA</title>
-<meta property="og:title" content="SVPRA">
+<meta property="og:title" content="AMORE">
 <meta property="og:locale" content="en_EU">
-<meta property="og:description" content="SVPRA's main page">
+<meta property="og:description" content="Amore's main page">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="assets/files/ico.png" type="image/png">
 <script src="https://sindresorhus.com/devtools-detect/index.js"></script>
@@ -47,19 +47,19 @@
 <header class="center info">
 <div class="center upperinfo">
 <div class="avatar-container"><img src="assets/files/ava.jpg" oncontextmenu="return false;" class="avatar"></div>
-<h2><span id="name">SVPRA</span></h2>
+<h2><span id="name">Fazliddin</span></h2>
 <hr width="295">
 <h3><span id="description" class="typed"></span></h3>
 <hr width="295">
 <h2>Links</h2>
 </div>
 <div class="buttons">
-<a href="javascript://" class="link" onclick="location.href='tg://resolve?domain=svprax'">Telegram</a>
-<a href="javascript://" class="link" onclick="location.href='mailto:me@svpra.ml'">Email</a>
+<a href="javascript://" class="link" onclick="location.href='https://t.me/sngscamer'">Telegram</a>
+<a href="javascript://" class="link" onclick="location.href='https://Instagram.com/the_farkhodov'">Instagram</a>
 </div>
 <div class="buttons">
-<a href="javascript://" class="link" onclick="location.href='tg://resolve?domain=awerquade'">Channel</a>
-<a href="javascript://" class="link" onclick="location.href='http://github.com/svpra/'">GitHub</a>
+<a href="javascript://" class="link" onclick="location.href='https://t.me/linuxil1'">Channel</a>
+<a href="javascript://" class="link" onclick="location.href='http://github.com/AmoreForever/'">GitHub</a>
 </div>
 <div class="buttons">
 <a href="javascript://" class="link" onclick="location.href='https://ru.stackoverflow.com/users/469436/svpra'">Stackoverflow</a>
@@ -69,7 +69,7 @@
 <h2>Some stuff</h2>
 </div>
 <div class="buttons">
-<a href="https://github.com/transkood" class="link" onclick="location.href='modules'">B2B Systems</a>
+<a href="https://github.com/AmoreForever" class="link" onclick="location.href='modules'">B2B Systems</a>
 </div>
 </header>
 </body>
