--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>SVPRA</title>
+<title>Farkhodov</title>
 <meta property="og:title" content="AMORE">
 <meta property="og:locale" content="en_EU">
 <meta property="og:description" content="Amore's main page">
@@ -47,7 +47,7 @@
 <header class="center info">
 <div class="center upperinfo">
 <div class="avatar-container"><img src="assets/files/ava.jpg" oncontextmenu="return false;" class="avatar"></div>
-<h2><span id="name">Fazliddin</span></h2>
+<h2><span id="name">Amore Forever</span></h2>
 <hr width="295">
 <h3><span id="description" class="typed"></span></h3>
 <hr width="295">
@@ -62,14 +62,14 @@
 <a href="javascript://" class="link" onclick="location.href='http://github.com/AmoreForever/'">GitHub</a>
 </div>
 <div class="buttons">
-<a href="javascript://" class="link" onclick="location.href='https://ru.stackoverflow.com/users/469436/svpra'">Stackoverflow</a>
+<a href="javascript://" class="link" onclick="location.href='https://t.me/kasiiimova'">Girl Friend</a>
 </div>
 <hr width="295">
 <div class="center upperinfo">
 <h2>Some stuff</h2>
 </div>
 <div class="buttons">
-<a href="https://github.com/AmoreForever" class="link" onclick="location.href='modules'">B2B Systems</a>
+<a href="https://github.com/AmoreForever/FTG-MODULES/" class="link" onclick="location.href='modules'">Mods</a>
 </div>
 </header>
 </body>
