--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <hr width="295">
 <h3><span id="description" class="typed"></span></h3>
 <hr width="295">
-<h2>Links</h2>
+<h2>Personal Links for you</h2>
 </div>
 <div class="buttons">
 <a href="javascript://" class="link" onclick="location.href='https://t.me/sngscamer'">Telegram</a>
@@ -62,14 +62,17 @@
 <a href="javascript://" class="link" onclick="location.href='http://github.com/AmoreForever/'">GitHub</a>
 </div>
 <div class="buttons">
-<a href="javascript://" class="link" onclick="location.href='https://t.me/kasiiimova'">Girl Friend</a>
+<a href="javascript://" class="link" onclick="location.href='https://tiktok.com/@amoreforeve'">TikTok</a>
 </div>
 <hr width="295">
 <div class="center upperinfo">
-<h2>Some stuff</h2>
+<h2>Some projects </h2>
 </div>
 <div class="buttons">
 <a href="https://github.com/AmoreForever/FTG-MODULES/" class="link" onclick="location.href='modules'">Mods</a>
+</div>
+<div class="buttons">
+<a href="https://github.com/AmoreForever/linuxil" class="link" onclick="location.href='modules'">Linuxil</a>
 </div>
 </header>
 </body>
