--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 <a href="javascript://" class="link" onclick="location.href='https://Instagram.com/the_farkhodov'">Instagram</a>
 </div>
 <div class="buttons">
-<a href="javascript://" class="link" onclick="location.href='https://t.me/linuxil1'">Channel</a>
+<a href="javascript://" class="link" onclick="location.href='https://tiktok.com/@amoreforeve'">TikTok</a>
 <a href="javascript://" class="link" onclick="location.href='http://github.com/AmoreForever/'">GitHub</a>
 </div>
 <div class="buttons">
-<a href="javascript://" class="link" onclick="location.href='https://tiktok.com/@amoreforeve'">TikTok</a>
+<a href="javascript://" class="link" onclick="location.href='https://www.donationalerts.com/r/the_farkhodov'">Donate</a>
 </div>
 <hr width="295">
 <div class="center upperinfo">
