--- a/index.html
+++ b/index.html
@@ -75,5 +75,10 @@
 <a href="https://github.com/AmoreForever/linuxil" class="link" onclick="location.href='modules'">Linuxil</a>
 </div>
 </header>
+
+<footer id="footer">
+<p class="copyright">&copy; Made by: <a href="https://t.me/sngscamer">Fazliddin Farhodov</a>.</p>
+</footer>
+
 </body>
 </html>
