--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 <div class="buttons">
 <a href="javascript://" class="link" onclick="location.href='https://t.me/sngscamer'">Telegram</a>
-<a href="javascript://" class="link" onclick="location.href='https://Instagram.com/the_farkhodov'">Instagram</a>
+<a href="javascript://" class="link" onclick="location.href='https://Instagram.com/xdxsde'">Instagram</a>
 </div>
 <div class="buttons">
 <a href="javascript://" class="link" onclick="location.href='https://tiktok.com/@amoreforeve'">TikTok</a>
