--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <h2>Personal Links for you</h2>
 </div>
 <div class="buttons">
-<a href="javascript://" class="link" onclick="location.href='https://t.me/sngscamer'">Telegram</a>
+<a href="javascript://" class="link" onclick="location.href='https://t.me/xdsxde'">Telegram</a>
 <a href="javascript://" class="link" onclick="location.href='https://Instagram.com/xdxsde'">Instagram</a>
 </div>
 <div class="buttons">
