--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <hr width="295">
 <h3><span id="description" class="typed"></span></h3>
 <hr width="295">
-<h2>Personal Links for you</h2>
+<h2>Personal Links</h2>
 </div>
 <div class="buttons">
 <a href="javascript://" class="link" onclick="location.href='https://t.me/xdsxde'">Telegram</a>
@@ -56,7 +56,7 @@
 </div>
 <hr width="295">
 <div class="center upperinfo">
-<h2>Some projects </h2>
+<h2>My Modules</h2>
 </div>
 <div class="buttons">
 <a href="https://github.com/AmoreForever/Amoremods/" class="link" onclick="location.href='modules'">Mods</a>
