--- a/info.html
+++ b/info.html
@@ -5,12 +5,13 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Хех</title>
+    <link rel="shortcut icon" href="assets/files/ico.png" type="image/png">
+    <title>I love smth</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
 </head>
 
-<body style="background: #000000; color:white;">
+<body style="background: hsl(0, 0%, 0%); color:white;">
     <h3 style="margin-top: 46vh; text-align: center;"><span id="animated" class="">Full</span><span class="typed-cursor">❚</span></h3>
 
     <script>
