--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header class="center info">
         <div class="center upperinfo">
             <div class="avatar-container"><img src="assets/files/ava.jpg" oncontextmenu="return false;" class="avatar"></div>
-            <h2><span id="name">Amore Forever</span></h2>
+            <h2><span id="name">Seitzhan Alibek</span></h2>
             <hr width="295">
             <div class="buttons">
                 <a href="javascript://" class="link" onclick="location.href='info.html'">About me</a>
@@ -53,22 +53,22 @@
             <h2>Personal Links</h2>
         </div>
         <div class="buttons">
-            <a href="javascript://" class="link" onclick="location.href='https://t.me/xdsxde'">Telegram</a>
+            <a href="javascript://" class="link" onclick="location.href='https://t.me/dixswr_zxc'">Telegram</a>
             <a href="javascript://" class="link" onclick="location.href='https://Instagram.com/xdxsde'">Instagram</a>
         </div>
         <div class="buttons">
-            <a href="javascript://" class="link" onclick="location.href='https://tiktok.com/@amoreforeve'">TikTok</a>
-            <a href="javascript://" class="link" onclick="location.href='http://github.com/AmoreForever/'">GitHub</a>
+            <a href="javascript://" class="link" onclick="location.href='https://tiktok.com/@dixswr'">TikTok</a>
+            <a href="javascript://" class="link" onclick="location.href='http://github.com/DFR3ddy90/'">GitHub</a>
         </div>
         <div class="buttons">
-            <a href="javascript://" class="link" onclick="location.href='https://www.donationalerts.com/r/the_farkhodov'">Donate</a>
+            <a href="javascript://" class="link" onclick="location.href='https://www.donationalerts.com/r/the_dix'">Donate</a>
         </div>
         <hr width="295">
         <div class="center upperinfo">
-            <h2>My Modules</h2>
+            <h2>Other/h2>
         </div>
         <div class="buttons">
-            <a href="https://github.com/AmoreForever/Amoremods/" class="link" onclick="location.href='modules'">Mods</a>
+            <a href="https://t.me/dixswr_im" class="link" onclick="location.href='modules'">Mods</a>
         </div>
     </header>
 </body>
