--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         </div>
         <hr width="295">
         <div class="center upperinfo">
-            <h2>Other/h2>
+            <h2>Other</h2>
         </div>
         <div class="buttons">
-            <a href="https://t.me/dixswr_im" class="link" onclick="location.href='modules'">Mods</a>
+            <a href="https://t.me/dixswr_im" class="link" onclick="location.href='modules'">Channel</a>
         </div>
     </header>
 </body>
