--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Farkhodov</title>
+    <title>Alibek</title>
     <meta property="og:title" content="AMORE">
     <meta property="og:locale" content="en_EU">
     <meta property="og:description" content="Amore's main page">
