--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         </div>
         <div class="buttons">
             <a href="javascript://" class="link" onclick="location.href='https://t.me/dixswr_zxc'">Telegram</a>
-            <a href="javascript://" class="link" onclick="location.href='https://Instagram.com/xdxsde'">Instagram</a>
+            <a href="javascript://" class="link" onclick="location.href='https://Instagram.com/Zoreks'">Instagram</a>
         </div>
         <div class="buttons">
-            <a href="javascript://" class="link" onclick="location.href='https://tiktok.com/@dixswr'">TikTok</a>
+            <a href="javascript://" class="link" onclick="location.href='https://tiktok.com/@insidefr3ddy'">TikTok</a>
             <a href="javascript://" class="link" onclick="location.href='http://github.com/DFR3ddy90/'">GitHub</a>
         </div>
         <div class="buttons">
