--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </script>
     <header class="center info">
         <div class="center upperinfo">
-            <div class="avatar-container"><img src="assets/files/ava.jpg" oncontextmenu="return false;" class="avatar"></div>
+            <div class="avatar-container"><img src="assets/files/ava.gif" oncontextmenu="return false;" class="avatar"></div>
             <h2><span id="name">Seitzhan Alibek</span></h2>
             <hr width="295">
             <div class="buttons">
