--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="buttons">
             <a href="javascript://" class="link" onclick="location.href='https://t.me/dixswr_zxc'">Telegram</a>
-            <a href="javascript://" class="link" onclick="location.href='https://Instagram.com/Zoreks'">Instagram</a>
+            <a href="javascript://" class="link" onclick="location.href='https://Instagram.com/CristianoRonaldo'">Instagram</a>
         </div>
         <div class="buttons">
             <a href="javascript://" class="link" onclick="location.href='https://tiktok.com/@insidefr3ddy'">TikTok</a>
