--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a href="javascript://" class="link" onclick="location.href='http://github.com/DFR3ddy90/'">GitHub</a>
         </div>
         <div class="buttons">
-            <a href="javascript://" class="link" onclick="location.href='https://www.donationalerts.com/r/the_dix'">Donate</a>
+            <a href="javascript://" class="link" onclick="location.href='https://www.donationalerts.com/r/dixswrzxc'">Donate</a>
         </div>
         <hr width="295">
         <div class="center upperinfo">
@@ -70,6 +70,7 @@
         <div class="buttons">
             <a href="https://t.me/dixswr_im" class="link" onclick="location.href='modules'">Channel</a>
         </div>
+<h2>Буду Рад Даже Копейке! </h2>
     </header>
 </body>
 
