--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </div>
         <div class="buttons">
             <a href="https://t.me/dixswr_im" class="link" onclick="location.href='modules'">Channel</a>
+            <a href="https://t.me/logs_dixswr" class="link" onclick=location.href='dixswr'">Logs</a>
         </div>
-<h2>Буду Рад Даже Копейке! </h2>
     </header>
 </body>
 
