--- a/info.html
+++ b/info.html
@@ -16,7 +16,7 @@
 
     <script>
         new Typed('#animated', {
-            strings: ["Alibek", "Из казахстана", "13 y.o", "Web Designer", "beginner nedoпрограммист", "Телеграм-бот разработчик", "Music lover<3", "Solo"],
+            strings: ["Alibek", "Из казахстана", "10 y.o", "Web Designer", "beginner nedoпрограммист", "Телеграм-бот разработчик", "Kausar milashka", "Solo"],
             typeSpeed: 17,
             backSpeed: 0,
             cursorChar: '❚',
