--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             <h2>Personal Links</h2>
         </div>
         <div class="buttons">
-            <a href="javascript://" class="link" onclick="location.href='https://t.me/dixswr_zxc'">Telegram</a>
-            <a href="javascript://" class="link" onclick="location.href='https://Instagram.com/CristianoRonaldo'">Instagram</a>
+            <a href="javascript://" class="link" onclick="location.href='https://t.me/reallyripalone'">Telegram бро меня уже нет</a>
+            <a href="javascript://" class="link" onclick="location.href='https://Instagram.com/ALONE'">Instagram</a>
         </div>
         <div class="buttons">
-            <a href="javascript://" class="link" onclick="location.href='https://tiktok.com/@insidefr3ddy'">TikTok</a>
+            <a href="javascript://" class="link" onclick="location.href='https://tiktok.com/dixswrzxc'">TikTok</a>
             <a href="javascript://" class="link" onclick="location.href='http://github.com/DFR3ddy90/'">GitHub</a>
         </div>
         <div class="buttons">
@@ -68,8 +68,7 @@
             <h2>Other</h2>
         </div>
         <div class="buttons">
-            <a href="https://t.me/dixswr_im" class="link" onclick="location.href='modules'">Channel</a>
-            <a href="https://t.me/logs_dixswr" class="link" onclick=location.href='dixswr'">Logs</a>
+            <a href="javascript://" class="link" onclick="location.href='https:://t.me/dixswrbio'">Мой телеграмм канал.</a>
         </div>
     </header>
 </body>
