--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2>Other</h2>
         </div>
         <div class="buttons">
-            <a href="javascript://" class="link" onclick="location.href='https:://t.me/dixswrbio'">Мой телеграмм канал.</a>
+            <a href="javascript://" class="link" onclick="location.href='https://t.me/dixswrbio'">Мой телеграмм канал.</a>
         </div>
     </header>
 </body>
